Bug 935595 - NS_NOTREACHED\("unexpected request"\) @ nsHttpChannel::OnStopRequest on partially cached download, r=michal